# kafkas

./: .mergify.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yaml
examples/: hello_kafka.rs  simple_consumer.rs  simple_producer.rs
src/: client.rs  connection.rs  connection_manager.rs  error.rs  lib.rs  metadata.rs  protocol.rs
src/consumer/: fetch_session.rs  fetcher.rs  mod.rs  partition_assignor.rs  subscription_state.rs
src/consumer/coordinator/: mod.rs
src/coordinator/: consumer.rs  mod.rs
src/executor/: mod.rs  timeout.rs
src/producer/: aggregator.rs  batch.rs  mod.rs  partitioner.rs
