[package]
name = "kafkas"
version = "0.1.0"
edition = "2021"
authors = ["iamazy <iamazy.me@outlook.com>"]
keywords = ["kafka", "async", "tokio", "async-std"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/iamazy/kafkas"
description = "async kafka client for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asynchronous-codec = { version = "0.7", optional = true }
async-io = { version = "2", optional = true }
async-native-tls = { version = "0.5", optional = true }
async-recursion = "1"
async-std = { version = "1", features = ["attributes", "unstable"], optional = true }
async-stream = "0.3"
bit-vec = "0.6"
bytes = "1"
chrono = "0.4"
dashmap = "5"
fnv = "1"
futures = "0.3"
fxhash = "0.2"
indexmap = "2"
kafka-protocol = "0.10"
native-tls = "0.2"
pin-project-lite = "0.2"
rand = "0.8"
regex = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tokio-native-tls = { version = "0.3", optional = true }
tracing = "0.1"
url = "2"
uuid = "1"

[dev-dependencies]
rand = "0.8"
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[features]
default = ["tokio-runtime", "async-std-runtime"]
tokio-runtime = ["tokio", "tokio-util", "tokio-native-tls"]
async-std-runtime = ["async-std", "asynchronous-codec", "async-native-tls", "async-io"]

[profile.release]
debug = true

# flamegraph
# rustup default nightly
# cargo flamegraph --example=hello_kafka